Fully Tested Segments

--- a/ETFOpt.ipynb
+++ b/ETFOpt.ipynb
@@ -14,6 +14,8 @@
     }
    ],
    "source": [
+    "#Model Ex Algos -- \n",
+    "\n",
     "# A naive recursive implementation \n",
     "# of 0-1 Knapsack Problem \n",
     "  \n",
@@ -110,51 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''ORIGINAL'''\n",
-    "\n",
-    "# A naive recursive implementation \n",
-    "# of 0-1 Knapsack Problem \n",
-    "  \n",
-    "# Returns the maximum value that  \n",
-    "# can be put in a knapsack of  \n",
-    "# capacity W \n",
-    "idx_used = []\n",
-    "\n",
-    "def knapSack(W, wt, val, n): \n",
-    "    \n",
-    "    # Base Case \n",
-    "    if n == 0 or W == 0 : \n",
-    "        return 0\n",
-    "  \n",
-    "    # If weight of the nth item is  \n",
-    "    # more than Knapsack of capacity W,  \n",
-    "    # then this item cannot be included  \n",
-    "    # in the optimal solution \n",
-    "    if (wt[n-1] > W): \n",
-    "        return knapSack(W, wt, val, n-1) \n",
-    "  \n",
-    "    # return the maximum of two cases: \n",
-    "    # (1) nth item included \n",
-    "    # (2) not included \n",
-    "    '''TO BUILD MORE SPECIFIC -- need to TEST if better, then mark it as being used...'''\n",
-    "    \n",
-    "    print(val[n-1] + knapSack(W-wt[n-1], wt, val, n-1))\n",
-    "    print('vs')\n",
-    "    print(knapSack(W, wt, val, n-1))\n",
-    "\n",
-    "    return max( \n",
-    "        val[n-1] + knapSack( \n",
-    "            W-wt[n-1], wt, val, n-1),  \n",
-    "            knapSack(W, wt, val, n-1)) \n",
-    "  \n",
-    "# end of function knapSack \n",
-    "  \n",
-    "# To test above function \n",
-    "val = [60, 100, 120] \n",
-    "wt = [10, 20, 30] \n",
-    "W = 50\n",
-    "n = len(val) \n",
-    "print(knapSack(W, wt, val, n) )"
+    "#Tweak example algo -- fit it to use case..."
    ]
   },
   {
@@ -258,7 +216,8 @@
     }
    ],
    "source": [
-    "'''Try doing this by hand -- using AlgoStart Git I wrote for optimizing starting values...\n",
+    "'''\n",
+    "Try doing this by hand -- using AlgoStart Git I wrote for optimizing starting values...\n",
     "Simply add DP / Recursion to that problem! \n",
     "    -Break out segments... find USD value range for those segments.\n",
     "        -Recursively optimize that small segment\n",
@@ -979,9 +938,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>asset_class</th>\n",
+       "      <th>category</th>\n",
+       "      <th>focus</th>\n",
+       "      <th>region</th>\n",
+       "      <th>is_levered</th>\n",
+       "      <th>net_expense</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>None</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [ticker, asset_class, category, focus, region, is_levered, net_expense]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Fixed Income\n",
     "USFi = etfs.loc[etfs.asset_class == 'Fixed Income'].loc[etfs.region == 'North America']\n",
@@ -1115,141 +1130,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Init, Assignment, Properties...\n",
+      "Test Optimal Dict:\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>asset_class</th>\n",
-       "      <th>category</th>\n",
-       "      <th>focus</th>\n",
-       "      <th>region</th>\n",
-       "      <th>is_levered</th>\n",
-       "      <th>net_expense</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>None</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GLD</td>\n",
-       "      <td>Commodities</td>\n",
-       "      <td>Precious Metals</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>Global</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     ticker  asset_class         category focus  region  is_levered  \\\n",
-       "None                                                                  \n",
-       "0       GLD  Commodities  Precious Metals  Gold  Global           0   \n",
-       "\n",
-       "      net_expense  \n",
-       "None               \n",
-       "0             0.4  "
+       "{'USFi': [('TLT', 0.15), ('JNK', 0.4)],\n",
+       " 'UST': [('TLT', 0.15)],\n",
+       " 'USCFi': [('JNK', 0.4)],\n",
+       " 'EQ': [('SPY', 0.094), ('IWM', 0.2), ('EFA', 0.32), ('EEM', 0.69)],\n",
+       " 'USEq': [('SPY', 0.094), ('IWM', 0.2)],\n",
+       " 'LC': [('SPY', 0.094)],\n",
+       " 'SC': [('IWM', 0.2)],\n",
+       " 'EM': [('EEM', 0.69)],\n",
+       " 'DM': [('EFA', 0.32)],\n",
+       " 'M': [('GLD', 0.4)],\n",
+       " 'G': [('GLD', 0.4)]}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Segments:\n",
+    "    SD = {}\n",
+    "    # ADD each TO SD (so can be called) \n",
+    "    # SD['USFi'] = self.USFi\n",
     "    \n",
     "    #Maybe import ETFData instance?\n",
     "    def __init__(self, df, etfd = None):\n",
+    "        pd.set_option('mode.chained_assignment', None)\n",
     "        self.df = df\n",
     "        #eventually...\n",
     "        #self.df = etfd.df ?\n",
     "        \n",
+    "        self.SD = {\n",
+    "            'USFi':self.USFi,\n",
+    "            'UST':self.UST,\n",
+    "            'USCFi':self.USCFi,\n",
+    "            'EQ':self.Eq,\n",
+    "            'USEq':self.USEq,\n",
+    "            'LC':self.LC,\n",
+    "            'SC':self.SC,\n",
+    "            'EM':self.EM,\n",
+    "            'DM':self.DM,\n",
+    "            'M':self.M,\n",
+    "            'G':self.G\n",
+    "        } \n",
+    "  \n",
+    "    def create_optimal_dct(self):\n",
+    "        segs = list(self.SD)\n",
+    "        OPT_PF = {}\n",
+    "        for seg in segs:\n",
+    "            df = self.SD[seg]\n",
+    "\n",
+    "            df.sort_values(by = 'net_expense',inplace=True)\n",
+    "            \n",
+    "            tickers = df.ticker.to_list()\n",
+    "            ers = df.net_expense.to_list()\n",
+    "            seg_pairs = [(tickers, ers) for tickers, ers in zip(tickers, ers)]\n",
+    "            OPT_PF[seg] = seg_pairs\n",
+    "\n",
+    "        return OPT_PF\n",
+    "\n",
+    "        \n",
     "    @property\n",
     "    def USFi(self):\n",
     "        USFi = self.df.loc[self.df.asset_class == 'Fixed Income'].loc[self.df.region == 'North America']\n",
+    "        USFi.sort_values(by='net_expense',inplace=True)\n",
     "        return USFi\n",
     "    \n",
     "    @property\n",
+    "    def USCFi(self):\n",
+    "        USCFi = self.USFi.loc[self.USFi.category == 'Corporate']\n",
+    "        #USCFi = USFi.loc[etfs.category == 'Corporate']\n",
+    "        USCFi.sort_values(by='net_expense',inplace=True)\n",
+    "        return USCFi\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    @property\n",
     "    def UST(self):\n",
-    "        UST = self.USFi.loc[self.df.category == 'Treasury']\n",
+    "        UST = self.df.loc[self.df.focus == 'Treasury']\n",
+    "        UST.sort_values(by='net_expense',inplace=True)\n",
     "        return UST\n",
     "    \n",
     "    @property\n",
     "    def Eq(self):\n",
     "        Eq = self.df.loc[self.df.asset_class == 'Equity']\n",
+    "        Eq.sort_values(by='net_expense',inplace=True)\n",
     "        return Eq\n",
     "    \n",
     "    @property\n",
     "    def USEq(self):\n",
     "        USEq = self.Eq.loc[self.Eq.region == 'North America']\n",
+    "        USEq.sort_values(by='net_expense',inplace=True)\n",
     "        return USEq\n",
     "    \n",
     "    @property\n",
     "    def LC(self):\n",
     "        LC = self.df.loc[self.df.asset_class == 'Equity'].loc[self.df.focus == 'Large Cap']\n",
+    "        LC.sort_values(by='net_expense',inplace=True)\n",
     "        return LC\n",
     "    \n",
     "    @property\n",
     "    def SC(self):\n",
     "        SC = self.df.loc[self.df.asset_class == 'Equity'].loc[self.df.focus == 'Small Cap']\n",
+    "        SC.sort_values(by='net_expense',inplace=True)\n",
     "        return SC\n",
     "    \n",
     "    @property\n",
     "    def EM(self):\n",
     "        EM = self.df.loc[self.df.region == 'Emerging Markets']\n",
+    "        EM.sort_values(by='net_expense',inplace=True)\n",
     "        return EM\n",
     "    \n",
     "    @property\n",
     "    def DM(self):\n",
     "        DM = self.df.loc[self.df.region == 'Developed Markets']\n",
+    "        DM.sort_values(by='net_expense',inplace=True)\n",
     "        return DM\n",
     "    \n",
     "    @property\n",
     "    def M(self):\n",
     "        M = self.df.loc[self.df.asset_class == 'Commodities'].loc[self.df.category == 'Precious Metals']\n",
+    "        M.sort_values(by='net_expense',inplace=True)\n",
     "        return M\n",
     "    \n",
     "    @property\n",
     "    def G(self):\n",
     "        G = self.M.loc[self.M.focus == 'Gold']\n",
+    "        G.sort_values(by='net_expense',inplace=True)\n",
     "        return G\n",
     "\n",
+    "print('Test Init, Assignment, Properties...')\n",
     "s = Segments(etfs)\n",
     "s.USFi\n",
-    "s.G"
+    "s.G\n",
+    "s.SD['G'] #Alt way of calling... (w STRINGS!)\n",
+    "print('Test Optimal Dict:')\n",
+    "s.create_optimal_dct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'USFi': [('TLT', 0.15), ('JNK', 0.4)],\n",
+       " 'USCFi': [('JNK', 0.4)],\n",
+       " 'Eq': [('SPY', 0.094), ('IWM', 0.2), ('EFA', 0.32), ('EEM', 0.69)],\n",
+       " 'USEq': [('SPY', 0.094), ('IWM', 0.2)],\n",
+       " 'LC': [('SPY', 0.094)],\n",
+       " 'SC': [('IWM', 0.2)],\n",
+       " 'EM': [('EEM', 0.69)],\n",
+       " 'DM': [('EFA', 0.32)],\n",
+       " 'M': [('GLD', 0.4)],\n",
+       " 'G': [('GLD', 0.4)]}"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Initial build ... Not using class (yet)\n",
+    "\n",
+    "'''\n",
+    "segs = list(SEGMENTS.keys())\n",
+    "\n",
+    "def create_optimal_dct(segment_dict):\n",
+    "    segs = list(segment_dict.keys())\n",
+    "    OPT_PF = {}\n",
+    "    for seg in segs:\n",
+    "        df = segment_dict[seg]\n",
+    "\n",
+    "        df.sort_values(by = 'net_expense',inplace=True)\n",
+    "        tickers = df.ticker.to_list()\n",
+    "        ers = df.net_expense.to_list()\n",
+    "        seg_pairs = [(tickers, ers) for tickers, ers in zip(tickers, ers)]\n",
+    "        OPT_PF[seg] = seg_pairs\n",
+    "        \n",
+    "    return OPT_PF\n",
+    "            \n",
+    "create_optimal_dct(SEGMENTS)"
    ]
   }
  ],
