Added top argument to Segments-create_opt_etfs

--- a/ETFOpt.ipynb
+++ b/ETFOpt.ipynb
@@ -2,67 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "220\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Model Ex Algos -- \n",
-    "\n",
-    "# A naive recursive implementation \n",
-    "# of 0-1 Knapsack Problem \n",
-    "  \n",
-    "# Returns the maximum value that  \n",
-    "# can be put in a knapsack of  \n",
-    "# capacity W \n",
-    "idx_used = []\n",
-    "\n",
-    "def knapSack(W, wt, val, n): \n",
-    "    \n",
-    "    # Base Case \n",
-    "    if n == 0 or W == 0 : \n",
-    "        return 0\n",
-    "  \n",
-    "    # If weight of the nth item is  \n",
-    "    # more than Knapsack of capacity W,  \n",
-    "    # then this item cannot be included  \n",
-    "    # in the optimal solution \n",
-    "    if (wt[n-1] > W): \n",
-    "        return knapSack(W, wt, val, n-1) \n",
-    "  \n",
-    "    # return the maximum of two cases: \n",
-    "    # (1) nth item included \n",
-    "    # (2) not included \n",
-    "    incl = val[n-1] + knapSack(W-wt[n-1], wt, val, n-1)\n",
-    "    not_incl = knapSack(W, wt, val, n-1)\n",
-    "    if not_incl > incl:\n",
-    "        print(f'Skipped item {n} -- {val[n] -- wt[n]}')\n",
-    "        \n",
-    "    #print(val[n-1] + knapSack(W-wt[n-1], wt, val, n-1))\n",
-    "    #print('vs')\n",
-    "    #print(knapSack(W, wt, val, n-1))\n",
-    "\n",
-    "    return max( \n",
-    "        val[n-1] + knapSack( \n",
-    "            W-wt[n-1], wt, val, n-1),  \n",
-    "            knapSack(W, wt, val, n-1)) \n",
-    "  \n",
-    "# end of function knapSack \n",
-    "  \n",
-    "# To test above function \n",
-    "val = [60, 100, 120] \n",
-    "wt = [10, 20, 30] \n",
-    "W = 50\n",
-    "n = len(val) \n",
-    "print(knapSack(W, wt, val, n) )"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1130,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1100,7 @@
        " 'G': [('GLD', 0.4)]}"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,16 +1132,18 @@
     "            'G':self.G\n",
     "        } \n",
     "  \n",
-    "    def create_optimal_dct(self):\n",
+    "    def create_optimal_dct(self,top = 5):\n",
     "        segs = list(self.SD)\n",
     "        OPT_PF = {}\n",
     "        for seg in segs:\n",
     "            df = self.SD[seg]\n",
+    "            \n",
+    "            #Add any OTHER filters here... (AUM, etc)\n",
     "\n",
     "            df.sort_values(by = 'net_expense',inplace=True)\n",
     "            \n",
-    "            tickers = df.ticker.to_list()\n",
-    "            ers = df.net_expense.to_list()\n",
+    "            tickers = df.ticker.to_list()[:top]\n",
+    "            ers = df.net_expense.to_list()[:top]\n",
     "            seg_pairs = [(tickers, ers) for tickers, ers in zip(tickers, ers)]\n",
     "            OPT_PF[seg] = seg_pairs\n",
     "\n",
@@ -1280,7 +1225,7 @@
     "s.G\n",
     "s.SD['G'] #Alt way of calling... (w STRINGS!)\n",
     "print('Test Optimal Dict:')\n",
-    "s.create_optimal_dct()"
+    "s.create_optimal_dct(top = 5)"
    ]
   },
   {
